fix code formatting

--- a/index.html
+++ b/index.html
@@ -1,35 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <style>
     body {
         font-family: 'PT Sans', sans-serif;
         background-color: #090000;
-        position: absolute; left:50%; top:50%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
         transform: translate(-50%, -50%);
         min-width: 60px;
         min-height: 150px;
         font-size: 130%;
     }
-    p { line-height: 2px; text-align: center; vertical-align: center }
-    p.btm { line-height: 100px; word-spacing: 1em; }
-    span.y { color: #FDE47F; }
-    span.g { color: #B576AD; }
-    span.b { color: #7CCCE5; }
-    span.l { color: #B7D968; }
-    span.r { color: #DE7070; }
-    a:link { color: inherit; text-decoration: none; }
-    a:visited { color: inherit; text-decoration: none; }
-    a:hover { text-decoration: underline overline; }
-    a:active { color: inherit; text-decoration: none; }
+
+    p {
+        line-height: 25px;
+        text-align: center;
+        vertical-align: center
+    }
+
+    p.btm {
+        line-height: 100px;
+        word-spacing: 1em;
+    }
+
+    span.y {
+        color: #FDE47F;
+    }
+
+    span.g {
+        color: #B576AD;
+    }
+
+    span.b {
+        color: #7CCCE5;
+    }
+
+    span.l {
+        color: #B7D968;
+    }
+
+    span.r {
+        color: #DE7070;
+    }
+
+    a:link {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline overline;
+    }
+
+    a:active {
+        color: inherit;
+        text-decoration: none;
+    }
 </style>
+
 <body>
-        <p>
+    <p>
         <span class="y">SRIJAN</a></span>
         <span class="g">Likes</span>
         <span class="r">Food,</span>
@@ -37,23 +83,26 @@
         <span class="b">Roller coster,</span>
         <span class="r">Music,</span>
         <span class="y">Photography,</span>
-        </p><p>
+    </p>
+    <p>
         <span class="l">Drums,</span>
         <span class="y">Chicken,</span>
         <span class="b">Motorcycles,</span>
         <span class="g">War movies,</span>
-        </p><p>
+    </p>
+    <p>
         <span class="b">Self learning,</span>
         <span class="r">Python,</span>
         <span class="y">IOT,</span>
         <span class="r">Data Science</span>
         <span class="l">..+</span>
-        </p>
-        <p class="btm">
+    </p>
+    <p class="btm">
         <span class="b"><a href="https://www.twitter.com/_srijankumar"><i class="fa fa-twitter"></i></a></span>
         <span class="r"><a href="https://in.linkedin.com/in/srijankumar"><i class="fa fa-linkedin"></i></a></span>
         <span class="y"><a href="https://github.com/srijan0102"><i class="fa fa-github-alt"></i></a></span>
         <span class="l"><a href="http://www.instagram.com/srijankumar"><i class="fa fa-instagram"></i></a></span>
         </span></p>
 </body>
+
 </html>
