--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <p class="btm">
         <span class="b"><a href="https://www.twitter.com/_srijankumar"><i class="fa fa-twitter"></i></a></span>
         <span class="r"><a href="https://in.linkedin.com/in/srijankumar"><i class="fa fa-linkedin"></i></a></span>
-        <span class="y"><a href="https://github.com/srijan0102"><i class="fa fa-github-alt"></i></a></span>
+        <span class="y"><a href="https://github.com/hellosrijan"><i class="fa fa-github-alt"></i></a></span>
         <span class="l"><a href="http://www.instagram.com/srijankumar"><i class="fa fa-instagram"></i></a></span>
         </span></p>
 </body>
