--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
         <span class="l">..+</span>
     </p>
     <p class="btm">
+        <span class="l"><a href="https://www.instagram.com/srijankumar"><i class="fa fa-instagram"></i></a></span>
         <span class="b"><a href="https://www.twitter.com/_srijankumar"><i class="fa fa-twitter"></i></a></span>
         <span class="r"><a href="https://in.linkedin.com/in/srijankumar"><i class="fa fa-linkedin"></i></a></span>
         <span class="y"><a href="https://github.com/hellosrijan"><i class="fa fa-github-alt"></i></a></span>
-        <span class="l"><a href="http://www.instagram.com/srijankumar"><i class="fa fa-instagram"></i></a></span>
+        <span class="l"><a href="https://dev.to/_srijankumar"><i class="fa fa-dev"></i></a></span>
         </span></p>
 </body>
 
