update font awesome cdn

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Welcome</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/2916578694.js" crossorigin="anonymous"></script>
 </head>
 <style>
     body {
@@ -102,7 +101,7 @@
         <span class="b"><a href="https://www.twitter.com/_srijankumar"><i class="fa fa-twitter"></i></a></span>
         <span class="r"><a href="https://in.linkedin.com/in/srijankumar"><i class="fa fa-linkedin"></i></a></span>
         <span class="y"><a href="https://github.com/hellosrijan"><i class="fa fa-github-alt"></i></a></span>
-        <span class="l"><a href="https://dev.to/_srijankumar"><i class="fa fa-dev"></i></a></span>
+        <span class="l"><a href="https://dev.to/_srijankumar"><i class="fab fa-dev"></i></a></span>
         </span></p>
 </body>
 
